# pidtuner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  todo.txt
capture/: output.csv
launch/: pidtuner.launch
msg/: Configuration.msg  PositionCommand.msg  PositionFeedback.msg  Step.msg  StepCommand.msg  VelocityCommand.msg  VelocityFeedback.msg
serial/: encoder.h  performer.h  pid.h  pwm.h  serial.ino
src/: pidtuner.cpp
srv/: ConfigurationServer.srv
ui/: README.md  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx  useMotorControl.ts  useRosBridge.ts  utils.ts
ui/app/components/: Navigation.tsx  Plot.module.css  Plot.tsx  knobUtils.ts
ui/app/components/Config/: Config.tsx
ui/app/components/Configuration/: Configuration.module.css  Configuration.tsx  settings.ts
ui/app/components/Gauge/: Gauge.module.css  Gauge.tsx
ui/app/components/Group/: Group.module.css  Group.tsx
ui/app/components/Input/: Input.module.css  Input.tsx
ui/app/components/Module/: Module.module.css  Module.tsx
ui/app/components/Plot/: Legend.tsx  Plot.module.css  Plot.tsx  PlotType.ts  Series.tsx  constants.ts  exportSamples.ts  formatSamples.ts  sample.json
ui/app/components/Position/: FullRangeIcon.tsx  HalfRangeIcon.tsx  LinearIcon.tsx  Position.module.css  Position.tsx  PositionKnob.module.css  PositionKnob.tsx  PositionSlider.module.css  PositionSlider.tsx  RadialIcon.tsx
ui/app/components/PrimaryInput/: PrimaryInput.module.css  PrimaryInput.tsx
ui/app/components/Separator/: Separator.module.css  Separator.tsx
ui/app/components/Settings/: Settings.tsx
ui/app/components/Steps/: Controls.tsx  HAxis.tsx  Performer.module.css  Performer.tsx  Playhead.tsx  Step.tsx  StepType.ts  Steps.tsx  Timeline.module.css  Timeline.tsx  VAxis.tsx  formatSteps.ts
ui/app/components/Velocity/: Invert.module.css  Invert.tsx  Meter.module.css  Meter.tsx  Velocity.tsx  VelocityKnob.module.css  VelocityKnob.tsx  VelocitySlider.module.css  VelocitySlider.tsx  index.ts
ui/app/config/: page.tsx
ui/app/position/: page.tsx
ui/app/step/: page.tsx
ui/design/: add-step.ai  bridge-off.ai  bridge-on.ai  delete-step.ai  export.ai  full-range.ai  gauge.ai  half-range.ai  icon.ai  invert.ai  linear.ai  meter.ai  pause.ai  performer-vaxis.ai  play.ai  playhead.ai  position-horizontal.ai  position-knob.ai  position.ai  radial.ai  record.ai  separator.ai  settings.ai  step.ai  steps.ai  stop.ai  ux.ai  velocity-knob.ai  velocity-slider.ai  velocity.ai
